# K.O._particles_modelling

./: README.md  base_world.txt  particles.cabal  world.txt  world_2.txt  world_30.txt
app/: Main.hs  folder.txt
src/: AppFuncs.hs  BaseApp.hs  BaseClasses.hs  Particles.hs  Physics.hs
worlds/: base_world.txt  world_01.txt  world_03.txt  world_04.txt  world_05.txt  world_29.txt  world_drop.txt  world_x450.txt
