name:                particles
version:             0.2
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Konopatkin Oleg
maintainer:          OlegKonopatkin@gmail.com
copyright:           2017 Konopatkin Oleg
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     BaseApp
                     , Particles
  build-depends:       base >= 4.7 && < 5
                     , gloss
  default-language:    Haskell2010

executable particles
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gloss
                     , particles
  default-language:    Haskell2010

test-suite particles-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gloss
                     , particles
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

